# point

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: DHT22.c.293186FB291CC2F5.idx  DHT22.h.582AD42A7A1D360D.idx  app_main.c.637602F659309FAE.idx  dht.c.088BB4EA7E425379.idx  dht.h.E6F992CA4B5615EB.idx  esp_idf_lib_helpers.h.33B5F02D03919C76.idx
components/adxl345/: CMakeLists.txt  component.mk
components/dht/: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  app_main.h  blufi_example.h
main/blufi/: blufi_event_handler.c  ip_event_handler.c  point_blufi.h  wifi_event_handler.c
main/http/: http_handler_get.c  http_handler_post.c  http_handlers.h
main/http/vincular/: postearjaja.js  vincular_index.html  vincular_style.css
main/mqttpoint/: mqtt_app.c  mqtt_event_handler.c  mqttpoint.h  mqttpoint_receive.c  mqttpoint_send.c
main/ota/: http_ota.c  http_ota.h
main/sensors/: DHT_task.c  DHT_test0.c  DHT_test1.c  adxl345_task.c  bmp180_task.c  sensors.h
main/wifi_prov_mgr/: custom_data_handler.c  wifi_prov_mgr.c  wifi_prov_mgr.h
wifi_prov_mgr/: sdkconfig
wifi_prov_mgr/main/: app_main.c
