cmake_minimum_required(VERSION 3.20)
idf_component_register(SRCS "app_main.c"
                            "mqttpoint/mqtt_app.c"
                            "mqttpoint/mqtt_event_handler.c"
                            "mqttpoint/mqttpoint_send.c"
                            "mqttpoint/mqttpoint_receive.c"
                            "sensors/DHT_task.c"
                            "sensors/DHT_test0.c"
                            "sensors/DHT_test1.c"
                            "blufi_security.c"
                            "blufi_init.c"
                            "blufi/blufi_event_handler.c"
                            "blufi/wifi_event_handler.c"
                            "blufi/ip_event_handler.c"
                    INCLUDE_DIRS ".")
